--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,12 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+main img {
+  width: 10%;
+}
