--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ li a {
 .banner {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 5rem 1fr 10rem;
   grid-template-areas:
   "image"
   "text"
@@ -71,15 +71,9 @@ li a {
 
 .text-banner h1 {
   font-size: 3.5rem;
-
+  padding-left: 1rem;
+  margin-bottom: 0;
 }
-/*
-  grid-column: 1;
-  grid-row: 2;
-  z-index: 1;
-  align-self: end;
-
-} */
 
 .text-banner p {
   font-size: 1.5rem;
@@ -87,13 +81,15 @@ li a {
   max-width: 53rem;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
+  padding: 1rem;
+  margin-top: 0;
 }
 
 .banner a {
   grid-column: 1;
   grid-row: 3;
   z-index: 1;
-  align-self: end;
+  align-self: center;
   font-size: 30px;
   padding-left: 2rem;
 }
