--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ li a {
 .banner {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 10rem;
+  grid-template-rows: 1rem 1fr 1fr;
   grid-template-areas:
   "image"
   "text"
@@ -57,13 +57,13 @@ li a {
   grid-column: 1;
   grid-row: 2;
   z-index: 1;
-  align-self: end;
+  align-self: center;
   padding-left: 2rem;
 }
 
 .banner img {
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.7;
   min-width: 30em;
   grid-column: 1 / -1;
   grid-row: 1 / -1;
@@ -72,6 +72,7 @@ li a {
 .text-banner h1 {
   font-size: 3.5rem;
   padding-left: 1rem;
+  padding-right: 1rem;
   margin-bottom: 0;
 }
 
@@ -89,9 +90,10 @@ li a {
   grid-column: 1;
   grid-row: 3;
   z-index: 1;
-  align-self: center;
+  align-self: start;
   font-size: 30px;
-  padding-left: 2rem;
+  text-decoration: none;
+  padding-left: 3rem;
 }
 
 /* ------ end of styling banner ------- */
