--- a/css/main.css
+++ b/css/main.css
@@ -106,10 +106,17 @@ li a {
   grid-template-areas:
   "card1 card2 card3";
   gap: 1rem;
+  padding: 2rem;
 }
 
 ol li {
   list-style: none;
+  background-color: rgba(166, 178, 169, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .card1 {
