--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 main img {
-  width: 60%;
+ width: 60%;
 }
 
 nav ul {
@@ -114,27 +114,32 @@ ol li {
   background-color: rgba(166, 178, 169, 0.3);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  flex-grow: 1;
 }
 
 .card1 {
   grid-row: 1;
   grid-column: 1;
   align-self: center;
+  flex-grow: 1;
+  align-self: stretch;
 }
 
 .card2 {
   grid-row: 1;
   grid-column: 2;
   align-self: center;
+  flex-grow: 1;
 }
 
 .card3 {
   grid-row: 1;
   grid-column: 3;
   align-self: center;
+  flex-grow: 1;
+  align-self: stretch;
 }
 
 
