--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,7 @@ main img {
   width: 100%;
   opacity: 0.7;
   min-width: 700px;
+  overflow: hidden;
   grid-column: 1 / -1;
   grid-row: 1 / -1;
 }
