--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,12 @@ main img {
   /* ------ end of styling Navigation ------- */
 
   .banner {
+    background-image: url("../images/lots-of-apples-banner.jpg");
+    /* opacity: 0.5; */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    max-height: 700px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
