--- a/css/main.css
+++ b/css/main.css
@@ -52,10 +52,10 @@ main img {
     max-height: 700px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 10em; */
     grid-template-areas:
     "text"
-    "button";
+    "button"
     gap: 1rem;
   }
 
@@ -68,18 +68,17 @@ main img {
     padding-left: 2rem;
   }
 
-  .banner img {
-    width: 100%;
-    opacity: 0.7;
-    grid-column: 1 / -1;
-    grid-row: 1 / -2;
-  }
-
   .text-banner h1 {
+    color: #fff;
+    -webkit-text-stroke-width: .5px;
+      -webkit-text-stroke-color: black;
     font-size: 3rem;
-    padding-left: 1rem;
+    font-weight: bold;
+    padding-left: .5rem;
     padding-right: 1rem;
     margin-bottom: 0;
+    line-height: 1;
+    padding-top: 3rem;
   }
 
   .text-banner p {
@@ -91,6 +90,8 @@ main img {
   }
 
   .button {
+    grid-column: 1;
+    grid-row: 2;
     margin: auto;
     z-index: 1;
     align-self: start;
@@ -101,7 +102,7 @@ main img {
   .button a {
     font-size: 30px;
     text-decoration: none;
-    padding: 2rem;
+    padding: 1.5rem 2rem;
     color: #fff;
     background-color: #580F1F;
     border-top-left-radius: 70px;
