--- a/css/main.css
+++ b/css/main.css
@@ -228,31 +228,7 @@ main img {
 @media only screen and (min-width: 42em) {
 
 .banner {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 30rem 1fr;
-  grid-template-areas:
-  "text"
-  "button";
-  gap: 1rem;
-}
-
-.text-banner {
-  display: content;
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 1;
-  align-self: end;
-  padding-left: 2rem;
-}
-
-.banner img {
-  width: 100%;
-  opacity: 0.7;
-  min-width: 700px;
-  overflow: hidden;
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
+padding-top: 5rem;
 }
 
 .text-banner h1 {
@@ -263,21 +239,11 @@ main img {
 }
 
 .text-banner p {
-  font-size: 1.5rem;
-  max-width: 53rem;
-}
-
-.button {
-  margin: auto;
-  grid-column: 1;
-  grid-row: 2;
-  z-index: 1;
-  align-self: start;
-  align-items: center;
+  /* font-size: 1.5rem; */
+  max-width: 42rem;
 }
 
 /* ------ end of styling banner ------- */
-
 
 .cards ol {
   display: grid;
@@ -327,12 +293,17 @@ ol li {
 
 @media only screen and (min-width: 70em) {
 
-  .banner {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 40em 20em;
-    gap: 1rem;
+  .text-banner {
+     margin: auto;
+     align-self: auto;
+     justify-content: center;
+     padding: 0;
   }
+
+.text-banner h1, p {
+  text-align: center;
+}
+
 
   /* ------ end of styling banner ------- */
 
