--- a/css/products.css
+++ b/css/products.css
@@ -41,13 +41,13 @@ main {
 
 .activities {
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 2 / 3;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
 .applepicking {
   grid-column: 2/4;
-  grid-row: 1/2;
+  grid-row: 1/3;
   background-color: rgba(255, 255, 255, 0.5);
   margin-bottom: -210px;
   padding: 1rem;
@@ -64,3 +64,30 @@ main {
    align-self: flex-end;
    align-items: center;
  }
+
+.apple h2 {
+  color: #fff;
+  font-size: 3.5rem;
+  font-weight: bold;
+  line-height: 1;
+}
+
+.activities {
+  padding: 0;
+}
+.activities p {
+  text-align: center;
+  color: #580f1f;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1;
+}
+
+activities h3{
+  text-align: center;
+}
+
+.activities li {
+  padding-left: 1rem;
+  list-style: none;
+}
