--- a/css/products.css
+++ b/css/products.css
@@ -45,17 +45,6 @@ main {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-.applepicking {
-  grid-column: 2/4;
-  grid-row: 1/3;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-bottom: -210px;
-  padding: 1rem;
-  margin-top: 2rem;
-  border-top-left-radius: 130px;
-  border-top-right-radius: 130px;
-}
-
  .button {
    grid-column: 2/3;
    grid-row: 4;
@@ -93,4 +82,39 @@ main {
   padding-left: 1.6rem;
   list-style: none;
   font-size: 1.35rem;
+}
+
+ /* -------- end of ul card .activities-------- */
+
+ .applepicking {
+   grid-column: 2/4;
+   grid-row: 1/3;
+   background-color: rgba(255, 255, 255, 0.5);
+   margin-bottom: -210px;
+   padding: 1rem;
+   margin-top: 2rem;
+   border-top-left-radius: 130px;
+   border-top-right-radius: 130px;
+ }
+
+.applepicking h3 {
+  text-align: center;
+}
+
+.mcintosh {
+  padding-left: 2rem;
+}
+
+.mcintosh dt {
+  color: #580f1f;
+  font-weight: bold;
+  font-size: 1.35rem;
+}
+
+.mcintosh dd {
+  font-size: .85rem;
+}
+
+.mcintosh dd:first-child {
+  font-weight: bold;
 }
