--- a/css/products.css
+++ b/css/products.css
@@ -18,7 +18,7 @@ h1 {
   background-repeat: no-repeat;
   display: grid;
   grid-template-columns: 15em 10em 1fr;
-  grid-template-rows: 20em 1fr 1fr;
+  grid-template-rows: 20em 1fr;
   grid-template-areas:
   "h2" "card top"
   "button" "card bottom"
@@ -44,15 +44,6 @@ main {
   grid-row: 2 / 3;
   background-color: rgba(255, 255, 255, 0.5);
 }
-
- .button {
-   grid-column: 2/3;
-   grid-row: 4;
-  padding-top: 6rem;
-  padding-left: 6rem;
-   align-self: flex-end;
-   align-items: center;
- }
 
 .apple h2 {
   color: #fff;
@@ -90,7 +81,7 @@ main {
    grid-column: 2/4;
    grid-row: 1/3;
    background-color: rgba(255, 255, 255, 0.5);
-   margin-bottom: -210px;
+   /* margin-bottom: -210px; */
    padding: 1rem;
    margin-top: 2rem;
    border-top-left-radius: 130px;
@@ -117,4 +108,13 @@ main {
 
 .mcintosh dd:first-child {
   font-weight: bold;
+}
+
+/* -------- end of dt dd card-------- */
+.button {
+  grid-column: 2/3;
+  grid-row: 4;
+  padding-top: 4rem;
+  align-self: flex-end;
+  text-align: center;
 }
