--- a/css/products.css
+++ b/css/products.css
@@ -64,20 +64,21 @@ h1 {
    /* -------- end of ul card .activities-------- */
 
    .applepicking {
-     grid-column: 2/4;
-     grid-row: 1/3;
      background-color: rgba(255, 255, 255, 0.5);
-     /* margin-bottom: -210px; */
      padding: 1rem;
      margin-top: 2rem;
-     margin-bottom: 1rem;
+     margin-bottom: 2rem;
+     padding-bottom: 3rem;
      border-top-left-radius: 130px;
      border-top-right-radius: 130px;
    }
 
   .applepicking h3 {
+    margin: auto;
     text-align: center;
     text-transform: uppercase;
+    max-width: 10rem;
+    line-height: 1.2;
   }
 
   .mcintosh {
@@ -100,24 +101,20 @@ h1 {
 
   /* -------- end of dt dd card-------- */
   .button {
-    grid-column: 2/3;
-    grid-row: 4;
-    padding-top: 4rem;
-    align-self: flex-end;
+    padding-top: 1rem;
     text-align: center;
   }
 
 }
 
-
 @media only screen and (min-width: 42em) {
 
 .apple {
-  background-image: url("../images/lots-of-apples-banner.jpg");
+  /* background-image: url("../images/lots-of-apples-banner.jpg");
   /* opacity: 0.5; */
-  background-size: cover;
+  /* background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;  */
   display: grid;
   grid-template-columns: 15em 10em 1fr;
   grid-template-rows: 20em 1fr;
@@ -126,7 +123,7 @@ h1 {
   "button" "card bottom"
   "button" "button";
   gap: 1rem;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
 }
 
 main {
