--- a/css/products.css
+++ b/css/products.css
@@ -107,14 +107,9 @@ h1 {
 
 }
 
-@media only screen and (min-width: 42em) {
+@media only screen and (min-width: 46em) {
 
 .apple {
-  /* background-image: url("../images/lots-of-apples-banner.jpg");
-  /* opacity: 0.5; */
-  /* background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;  */
   display: grid;
   grid-template-columns: 15em 10em 1fr;
   grid-template-rows: 20em 1fr;
@@ -123,14 +118,10 @@ h1 {
   "button" "card bottom"
   "button" "button";
   gap: 1rem;
-  /* padding: 0 1rem; */
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  margin: 3rem;
+  margin: 2rem;
 }
 
 .apple h2, p {
@@ -141,7 +132,6 @@ main {
 .activities {
   grid-column: 1;
   grid-row: 2 / 3;
-  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .apple h2 {
@@ -154,7 +144,8 @@ main {
 
 .activities {
   padding: 0;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
+  margin-bottom:  2rem;
 }
 .activities p {
   padding-left: 1.6rem;
@@ -164,60 +155,43 @@ main {
   line-height: 1;
 }
 
-.activities h3 {
-  padding-left: 1.6rem;
-}
-
-.activities li {
-  padding-left: 1.6rem;
-  list-style: none;
-  font-size: 1.35rem;
-}
-
  /* -------- end of ul card .activities-------- */
 
  .applepicking {
    grid-column: 2/4;
    grid-row: 1/3;
-   background-color: rgba(255, 255, 255, 0.5);
-   /* margin-bottom: -210px; */
    padding: 1rem;
    margin-top: 2rem;
-   margin-bottom: 1rem;
-   border-top-left-radius: 130px;
-   border-top-right-radius: 130px;
+   margin-bottom: 2rem;
  }
 
 .applepicking h3 {
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.mcintosh {
-  padding-left: 2rem;
-}
-
-.mcintosh dt {
-  color: #580f1f;
-  font-weight: bold;
-  font-size: 1.35rem;
-}
-
-.mcintosh dd {
-  font-size: .85rem;
-}
-
-.mcintosh dd:first-child {
-  font-weight: bold;
+  max-width: none;
 }
 
 /* -------- end of dt dd card-------- */
+
 .button {
   grid-column: 2/3;
   grid-row: 4;
-  padding-top: 4rem;
-  align-self: flex-end;
-  text-align: center;
+  padding-bottom: 2rem;
 }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+   .applepicking {
+     max-width: 55rem;
+   }
+
+  .applepicking h3 {
+    max-width: 200px;
+    padding-bottom: 1rem;
+  }
+
+  .mcintosh dd {
+    max-width: 45rem;
+  }
 
 }
