--- a/css/products.css
+++ b/css/products.css
@@ -393,6 +393,80 @@ main {
 }
 
 /* END of PUMPKIN- MEDIUM screen */
+
+.tree {
+  display: grid;
+  grid-template-columns: 15em 10em 1fr;
+  grid-template-rows: 20em 1fr;
+  grid-template-areas:
+  "h2" "card top"
+  "button" "card bottom"
+  "button" "button";
+  gap: 1rem;
+}
+
+main {
+  margin: 2rem;
+}
+
+.tree h2, p {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.christmas {
+  grid-column: 1;
+  grid-row: 2 / 3;
+}
+
+.tree h2 {
+  color: #fff;
+  font-size: 3.5rem;
+  font-weight: bold;
+  line-height: 1.2;
+  padding-left: 1rem;
+}
+
+.christmas {
+  padding: 0;
+  padding-bottom: 3rem;
+  margin-bottom:  2rem;
+}
+.christmas p {
+  padding-left: 1.6rem;
+  color: #580f1f;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1;
+}
+
+ /* -------- end of ul card .activities-------- */
+
+ .christmastree {
+   grid-column: 2/4;
+   grid-row: 1/3;
+   padding: 1rem;
+   margin-top: 2rem;
+   margin-bottom: 2rem;
+   padding-top: 6rem;
+ }
+
+.christmastree h3 {
+  max-width: none;
+}
+
+/* -------- end of dt dd card-------- */
+
+.button {
+  grid-column: 2/3;
+  grid-row: 4;
+  padding-bottom: 2rem;
+  padding-top: 5rem;
+  text-align: center;
+
+}
+/* END OF CHRISTMAS TREE-MEDIUM SCREEN */
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -419,5 +493,13 @@ main {
    padding-bottom: 1rem;
  }
 
+ .christmastree {
+   max-width: 55rem;
+ }
+
+.christmastree h3 {
+  max-width: 200px;
+  padding-bottom: 1rem;
+}
 
 }
