--- a/css/products.css
+++ b/css/products.css
@@ -36,8 +36,10 @@ h1 {
   }
 
   .activities {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: .2rem 0 2rem;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
   }
 
   .activities p {
@@ -59,17 +61,17 @@ h1 {
     font-size: 1.35rem;
   }
 
-   /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
-   .applepicking {
-     background-color: rgba(255, 255, 255, 0.5);
-     padding: 1rem;
-     margin-top: 2rem;
-     margin-bottom: 2rem;
-     padding-bottom: 3rem;
-     border-top-left-radius: 130px;
-     border-top-right-radius: 130px;
-   }
+  .applepicking {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-bottom: 3rem;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+  }
 
   .applepicking h3 {
     margin: auto;
@@ -79,16 +81,20 @@ h1 {
     line-height: 1.2;
   }
 
-.mcintosh dt {
-  color: #580f1f;
-  font-size: 1.2rem;
-  font-weight: bold;
-}
+  .mcintosh {
+    padding-left: 2rem;
+  }
 
-.mcintosh dd {
-  font-size: .85rem;
+  .mcintosh dt {
+    color: #580f1f;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 
-}
+  .mcintosh dd {
+    font-size: .85rem;
+
+  }
   /* -------- end of dt dd card-------- */
   .button {
     margin: auto;
@@ -103,381 +109,392 @@ h1 {
     text-align: center;
   }
 
-/* END OF APPLE CARD-Small screen */
+  /* END OF APPLE CARD-Small screen */
 
-.pumpkin {
-  background-image: url("../images/lots-of-pumpkins.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 0 1rem;
-  margin-bottom: 2rem;
-}
+  .pumpkin {
+    background-image: url("../images/lots-of-pumpkins.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0 1rem;
+    margin-bottom: 2rem;
+  }
 
-.pumpkin h2 {
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 1.6rem;
-}
+  .pumpkin h2 {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 1.6rem;
+  }
 
-.pumpkinpatch li {
-  padding-left: 1.6rem;
-  /* list-style: none; */
-  font-size: .85rem;
-}
+  .pumpkinpatch li {
+    padding-left: 1.6rem;
+    /* list-style: none; */
+    font-size: .85rem;
+  }
 
- /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
- .pumpkinpatch {
-   background-color: rgba(255, 255, 255, 0.5);
-   padding: 1rem;
-   margin-top: 2rem;
-   margin-bottom: 2rem;
-   padding-bottom: 3rem;
-   border-top-left-radius: 130px;
-   border-top-right-radius: 130px;
- }
+  .pumpkinpatch {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-bottom: 3rem;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+  }
 
-.pumpkinpatch h3 {
-  margin: auto;
-  text-align: center;
-  text-transform: uppercase;
-  max-width: 10rem;
-  line-height: 1.2;
+  .pumpkinpatch h3 {
+    margin: auto;
+    text-align: center;
+    text-transform: uppercase;
+    max-width: 10rem;
+    line-height: 1.2;
 
-}
+  }
 
-.pumpkinpatch p {
-  font-size: 1.2rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 2rem;
-  max-width: 36rem;
-}
+  .pumpkinpatch p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 2rem;
+    max-width: 36rem;
+  }
 
-/* -------- end of pumpkin card-------- */
-.button {
-  padding-top: .85rem;
-  text-align: left;
-}
+  /* -------- end of pumpkin card-------- */
+  .button {
+    padding-top: .85rem;
+    text-align: left;
+  }
 
-/* END OF PUMPKIN CARD - small screen */
+  /* END OF PUMPKIN CARD - small screen */
 
-.tree {
-  background-image: url("../images/lots-of-branch.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 0 1rem;
-}
+  .tree {
+    background-image: url("../images/lots-of-branch.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0 1rem;
+  }
 
-.tree h2 {
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 1.6rem;
-}
+  .tree h2 {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 1.6rem;
+  }
 
-.christmastree li {
-  padding-left: 1.6rem;
-  /* list-style: none; */
-  font-size: .85rem;
-}
+  .christmastree li {
+    padding-left: 1.6rem;
+    /* list-style: none; */
+    font-size: .85rem;
+  }
 
-.christmas {
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: .2rem 0 2rem;
-}
+  .christmas {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: .2rem 0 2rem;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
+  }
 
-.christmas p {
-  padding-left: 1.6rem;
-  color: #580f1f;
-  font-size: 1.2rem;
-  font-weight: bold;
-  line-height: 1;
-}
+  .christmas p {
+    padding-left: 1.6rem;
+    color: #580f1f;
+    font-size: 1.2rem;
+    font-weight: bold;
+    line-height: 1;
+  }
 
-.christmas h3 {
-  padding-left: 1.6rem;
-  margin-bottom: 0;
-}
+  .christmas h3 {
+    padding-left: 1.6rem;
+    margin-bottom: 0;
+  }
 
-.christmas li {
-  padding-left: 1.6rem;
-  list-style: none;
-  font-size: 1.35rem;
-}
+  .christmas li {
+    padding-left: 1.6rem;
+    list-style: none;
+    font-size: 1.35rem;
+  }
 
- /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
- .christmastree {
-   background-color: rgba(255, 255, 255, 0.5);
-   padding: 1rem;
-   margin-top: 2rem;
-   margin-bottom: 2rem;
-   padding-bottom: 3rem;
-   border-top-left-radius: 130px;
-   border-top-right-radius: 130px;
- }
+  .christmastree {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-bottom: 3rem;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+  }
 
-.christmastree h3 {
-  margin: auto;
-  text-align: center;
-  text-transform: uppercase;
-  max-width: 10rem;
-  line-height: 1.2;
+  .christmastree h3 {
+    margin: auto;
+    text-align: center;
+    text-transform: uppercase;
+    max-width: 10rem;
+    line-height: 1.2;
 
-}
+  }
 
-.christmastree p {
-  font-size: 1.2rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 2rem;
-  max-width: 36rem;
-}
+  .christmastree p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 2rem;
+    max-width: 36rem;
+  }
 
-/* -------- end of pumpkin card-------- */
-.button {
-  padding-top: .85rem;
-  text-align: center;
-}
- /* END OF CHRISTMAS TREE-SMALL SCREEN */
+  /* -------- end of pumpkin card-------- */
+  .button {
+    padding-top: .85rem;
+    text-align: center;
+  }
+  /* END OF CHRISTMAS TREE-SMALL SCREEN */
 
 }
 
 @media only screen and (min-width: 46em) {
 
-.apple {
-  display: grid;
-  grid-template-columns: 15em 10em 1fr;
-  grid-template-rows: 20em 1fr;
-  grid-template-areas:
-  "h2" "card top"
-  "button" "card bottom"
-  "button" "button";
-  gap: 1rem;
-}
+  .apple {
+    display: grid;
+    grid-template-columns: 15em 10em 1fr;
+    grid-template-rows: 20em 1fr;
+    grid-template-areas:
+    "h2" "card top"
+    "button" "card bottom"
+    "button" "button";
+    gap: 1rem;
+  }
 
-main {
-  margin: 2rem;
-}
+  main {
+    margin: 2rem;
+  }
 
-.apple h2, p {
-  grid-column: 1;
-  grid-row: 1;
-}
+  .apple h2, p {
+    grid-column: 1;
+    grid-row: 1;
+  }
 
-.activities {
-  grid-column: 1;
-  grid-row: 2 / 3;
-}
+  .activities {
+    grid-column: 1;
+    grid-row: 2 / 3;
+  }
 
-.apple h2 {
-  color: #fff;
-  font-size: 3.5rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 1rem;
-}
+  .apple h2 {
+    color: #fff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 1rem;
+  }
 
-.activities {
-  padding: 0;
-  padding-bottom: 3rem;
-  margin-bottom:  2rem;
-}
-.activities p {
-  padding-left: 1.6rem;
-  color: #580f1f;
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1;
-}
+  .activities {
+    padding: 0;
+    padding-bottom: 3rem;
+    margin-bottom:  2rem;
+  }
+  .activities p {
+    padding-left: 1.6rem;
+    color: #580f1f;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1;
+  }
 
- /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
- .applepicking {
-   grid-column: 2/4;
-   grid-row: 1/3;
-   padding: 1rem;
-   margin-top: 2rem;
-   margin-bottom: 2rem;
- }
+  .applepicking {
+    grid-column: 2/4;
+    grid-row: 1/3;
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 
-.applepicking h3 {
-  max-width: none;
-}
+  .applepicking h3 {
+    max-width: none;
+  }
 
-/* -------- end of dt dd card-------- */
+  /* -------- end of dt dd card-------- */
 
-.button {
-  grid-column: 2/3;
-  grid-row: 4;
-  padding-bottom: 2rem;
-}
+  .button {
+    grid-column: 2/3;
+    grid-row: 4;
+    padding-bottom: 2rem;
+  }
 
-/* END OF APPLE-MEDIUM SCREEN */
+  /* END OF APPLE-MEDIUM SCREEN */
 
-.pumpkin {
-  display: grid;
-  grid-template-columns: 15em 10em 1fr;
-  grid-template-rows: 20em 1fr;
-  grid-template-areas:
-  "h2" "card top"
-  "button" "card bottom"
-  "button" "button";
-  gap: 1rem;
-}
+  .pumpkin {
+    display: grid;
+    grid-template-columns: 15em 10em 1fr;
+    grid-template-rows: 20em 1fr;
+    grid-template-areas:
+    "h2" "card top"
+    "button" "card bottom"
+    "button" "button";
+    gap: 1rem;
+  }
 
-main {
-  margin: 2rem;
-}
+  main {
+    margin: 2rem;
+  }
 
-.pumpkin h2, p {
-  grid-column: 1;
-  grid-row: 1;
-}
+  .pumpkin h2, p {
+    grid-column: 1;
+    grid-row: 1;
+  }
 
-.activities {
-  grid-column: 1;
-  grid-row: 2 / 3;
-}
+  .activities {
+    grid-column: 1;
+    grid-row: 2 / 3;
+  }
 
-.pumpkin h2 {
-  color: #fff;
-  font-size: 3.5rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 1rem;
-}
+  .pumpkin h2 {
+    color: #fff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 1rem;
+  }
 
-.activities {
-  padding: 0;
-  padding-bottom: 3rem;
-  margin-bottom:  2rem;
-}
-.activities p {
-  padding-left: 1.6rem;
-  color: #580f1f;
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1;
-}
+  .activities {
+    padding: 0;
+    padding-bottom: 3rem;
+    margin-bottom:  2rem;
+  }
+  .activities p {
+    padding-left: 1.6rem;
+    color: #580f1f;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1;
+  }
 
- /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
- .pumpkinpatch {
-   grid-column: 2/4;
-   grid-row: 1/3;
-   padding: 1rem;
-   margin-top: 2rem;
-   margin-bottom: 2rem;
-   padding-top: 6rem;
- }
+  .pumpkinpatch {
+    grid-column: 2/4;
+    grid-row: 1/3;
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-top: 6rem;
+  }
 
-.pumpkinpatch h3 {
-  max-width: none;
-}
+  .pumpkinpatch h3 {
+    max-width: none;
+  }
 
-/* -------- end of dt dd card-------- */
+  /* -------- end of dt dd card-------- */
 
-.button {
-  grid-column: 2/3;
-  grid-row: 4;
-  padding-bottom: 2rem;
-  padding-top: 5rem;
-  text-align: center;
-}
+  .button {
+    grid-column: 2/3;
+    grid-row: 4;
+    padding-bottom: 2rem;
+    padding-top: 5rem;
+    text-align: center;
+  }
 
-/* END of PUMPKIN- MEDIUM screen */
+  /* END of PUMPKIN- MEDIUM screen */
 
-.tree {
-  display: grid;
-  grid-template-columns: 15em 10em 1fr;
-  grid-template-rows: 20em 1fr;
-  grid-template-areas:
-  "h2" "card top"
-  "button" "card bottom"
-  "button" "button";
-  gap: 1rem;
-}
+  .tree {
+    display: grid;
+    grid-template-columns: 15em 10em 1fr;
+    grid-template-rows: 20em 1fr;
+    grid-template-areas:
+    "h2" "card top"
+    "button" "card bottom"
+    "button" "button";
+    gap: 1rem;
+  }
 
-main {
-  margin: 2rem;
-}
+  main {
+    margin: 2rem;
+  }
 
-.tree h2, p {
-  grid-column: 1;
-  grid-row: 1;
-}
+  .tree h2, p {
+    grid-column: 1;
+    grid-row: 1;
+  }
 
-.christmas {
-  grid-column: 1;
-  grid-row: 2 / 3;
-}
+  .christmas {
+    grid-column: 1;
+    grid-row: 2 / 3;
+  }
 
-.tree h2 {
-  color: #fff;
-  font-size: 3.5rem;
-  font-weight: bold;
-  line-height: 1.2;
-  padding-left: 1rem;
-}
+  .tree h2 {
+    color: #fff;
+    font-size: 3.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    padding-left: 1rem;
+  }
 
-.christmas {
-  padding: 0;
-  padding-bottom: 3rem;
-  margin-bottom:  2rem;
-}
-.christmas p {
-  padding-left: 1.6rem;
-  color: #580f1f;
-  font-size: 1.5rem;
-  font-weight: bold;
-  line-height: 1;
-}
+  .christmas {
+    padding: 0;
+    padding-bottom: 3rem;
+    margin-bottom:  2rem;
+  }
+  .christmas p {
+    padding-left: 1.6rem;
+    color: #580f1f;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1;
+  }
 
- /* -------- end of ul card .activities-------- */
+  /* -------- end of ul card .activities-------- */
 
- .christmastree {
-   grid-column: 2/4;
-   grid-row: 1/3;
-   padding: 1rem;
-   margin-top: 2rem;
-   margin-bottom: 2rem;
-   padding-top: 6rem;
- }
+  .christmastree {
+    grid-column: 2/4;
+    grid-row: 1/3;
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-top: 6rem;
+  }
 
-.christmastree h3 {
-  max-width: none;
-}
+  .christmastree h3 {
+    max-width: none;
+  }
 
-/* -------- end of dt dd card-------- */
+  /* -------- end of dt dd card-------- */
 
-.button {
-  grid-column: 2/3;
-  grid-row: 4;
-  padding-bottom: 2rem;
-  padding-top: 5rem;
-  text-align: center;
+  .button {
+    grid-column: 2/3;
+    grid-row: 4;
+    padding-bottom: 2rem;
+    padding-top: 5rem;
+    text-align: center;
 
-}
-/* END OF CHRISTMAS TREE-MEDIUM SCREEN */
+  }
+  /* END OF CHRISTMAS TREE-MEDIUM SCREEN */
 
 }
 
 @media only screen and (min-width: 60em) {
 
-   .applepicking {
-     max-width: 55rem;
-   }
+  .applepicking {
+    max-width: 55rem;
+  }
 
   .applepicking h3 {
     max-width: 200px;
     padding-bottom: 1rem;
+  }
+
+  .activities p {
+    padding-left: 0rem;
+    margin-left: -1.5rem;
+  }
+
+  .pumpkin .activities p {
+    margin-left: -1rem;
   }
 
   .mcintosh dd {
@@ -488,18 +505,23 @@ main {
     max-width: 55rem;
   }
 
- .pumpkinpatch h3 {
-   max-width: 200px;
-   padding-bottom: 1rem;
- }
+  .pumpkinpatch h3 {
+    max-width: 200px;
+    padding-bottom: 1rem;
+  }
 
- .christmastree {
-   max-width: 55rem;
- }
+  .christmastree {
+    max-width: 55rem;
+  }
 
-.christmastree h3 {
-  max-width: 200px;
-  padding-bottom: 1rem;
-}
+  .christmas p {
+    padding-left: 0rem;
+    margin-left: -1rem;
+  }
+
+  .christmastree h3 {
+    max-width: 200px;
+    padding-bottom: 1rem;
+  }
 
 }
