Add background colour in case the images does not load

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ main img {
   /* ------ end of styling Navigation ------- */
 
   .banner {
+    background: #ccc;
     background-image: url("../images/lots-of-apples-banner.jpg");
     background-size: cover;
     background-position: center;
