--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,25 @@ body {
   padding: 0;
 }
 
+.skip-links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
+a:focus {
+  outline: 3px solid #000;
+}
+
 main img {
   width: 60%;
 }
