--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,10 @@ main img {
 @media only screen and (min-width: 20em) {
 
   nav ul {
-    padding: .8rem 0 .8rem;
+    padding-top: .8rem;
+    padding-bottom: .8rem;
+    padding-left: 0;
+    padding-right: 0;
     list-style: none;
     display: flex;
     background-color: black;
@@ -64,9 +67,8 @@ main img {
     width: 2.5em;
     z-index: 2;
     top: 1.25rem;
-    right: 0.5rem;
+    right: .5rem;
   }
-
 
   /* ------ end of styling Navigation ------- */
 
@@ -81,8 +83,8 @@ main img {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 10em;
     grid-template-areas:
-    "text"
-    "button";
+      "text"
+      "button";
     gap: 1rem;
   }
 
@@ -110,7 +112,7 @@ main img {
   .text-banner p {
     font-size: 1.2rem;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, .5);
     border-radius: 1rem;
     padding: .8rem;
   }
@@ -130,17 +132,17 @@ main img {
     text-decoration: none;
     padding: 1.5rem 2rem;
     color: #fff;
-    background-color: #580F1F;
+    background-color: #580f1f;
     border-top-left-radius: 70px;
     border-top-right-radius: 70px;
   }
 
   .button a:hover {
     font-weight: bold;
-    color: #580F1F;
-    background-color:  #fff;
+    color: #580f1f;
+    background-color: #fff;
     border-style: solid;
-    border-color: #580F1F;
+    border-color: #580f1f;
     border-width: 6px;
   }
 
@@ -150,22 +152,21 @@ main img {
 
   /* ------ end of styling banner ------- */
 
-
   .cards ol {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-    "card1"
-    "card2"
-    "card3";
+      "card1"
+      "card2"
+      "card3";
     gap: 1rem;
     padding: 2rem;
   }
 
   ol li {
     list-style: none;
-    background-color: rgba(166, 178, 169, 0.3);
+    background-color: rgba(166, 178, 169, .3);
     display: flex;
     flex-direction: column;
     align-content: space-between;
@@ -175,7 +176,7 @@ main img {
 
   .cards h2 {
     font-weight: bold;
-    color: #580F1F;
+    color: #580f1f;
     font-size: 2rem;
   }
 
@@ -240,7 +241,6 @@ main img {
 
   /* ------ end of styling contact section ------- */
 
-
   footer {
     font-size: small;
     padding-top: 3rem;
@@ -279,7 +279,7 @@ main img {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
-    "card1 card2 card3";
+"card1 card2 card3";
     gap: 1rem;
     padding: 2rem;
   }
@@ -336,6 +336,7 @@ main img {
   .contact p {
     text-align: left;
   }
+
   /* ------ end of styling banner ------- */
 
 }
