--- a/css/products.css
+++ b/css/products.css
@@ -31,7 +31,7 @@ h1 {
 
   .apple h2 {
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: bold;
     line-height: 1.2;
     padding-left: 1.6rem;
@@ -60,7 +60,7 @@ h1 {
   .activities li {
     padding-left: 1.6rem;
     list-style: none;
-    font-size: 1.35rem;
+    font-size: 1.15rem;
   }
 
   /* -------- end of ul card .activities-------- */
@@ -482,6 +482,10 @@ h1 {
 }
 
 @media only screen and (min-width: 60em) {
+
+  main {
+    max-width: 90rem;
+  }
 
   .applepicking {
     max-width: 55rem;
