--- a/css/products.css
+++ b/css/products.css
@@ -159,10 +159,11 @@ h1 {
   }
 
   .pumpkinpatch p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     line-height: 1.2;
     padding-left: 2rem;
+    padding-right: 1rem;
     max-width: 36rem;
   }
 
@@ -185,7 +186,7 @@ h1 {
 
   .tree h2 {
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: bold;
     line-height: 1.2;
     padding-left: 1.6rem;
@@ -220,7 +221,7 @@ h1 {
   .christmas li {
     padding-left: 1.6rem;
     list-style: none;
-    font-size: 1.35rem;
+    font-size: 1.15rem;
   }
 
   /* -------- end of ul card .activities-------- */
@@ -245,10 +246,11 @@ h1 {
   }
 
   .christmastree p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     line-height: 1.2;
     padding-left: 2rem;
+    padding-right: 1rem;
     max-width: 36rem;
   }
 
@@ -278,9 +280,10 @@ h1 {
     margin: 2rem;
   }
 
-  .apple h2, p {
+  .apple h2 {
     grid-column: 1;
     grid-row: 1;
+    letter-spacing: -.031em;
   }
 
   .activities {
@@ -301,12 +304,12 @@ h1 {
     padding-bottom: 3rem;
     margin-bottom:  2rem;
   }
+
   .activities p {
     padding-left: 1.6rem;
     color: #580f1f;
     font-size: 1.5rem;
     font-weight: bold;
-    line-height: 1;
   }
 
   /* -------- end of ul card .activities-------- */
@@ -351,6 +354,7 @@ h1 {
   .pumpkin h2, p {
     grid-column: 1;
     grid-row: 1;
+    letter-spacing: -.031em;
   }
 
   .activities {
@@ -371,13 +375,6 @@ h1 {
     padding-bottom: 3rem;
     margin-bottom:  2rem;
   }
-  .activities p {
-    padding-left: 1.6rem;
-    color: #580f1f;
-    font-size: 1.5rem;
-    font-weight: bold;
-    line-height: 1;
-  }
 
   /* -------- end of ul card .activities-------- */
 
@@ -387,11 +384,16 @@ h1 {
     padding: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding-top: 6rem;
+    padding-top: 3rem;
   }
 
   .pumpkinpatch h3 {
     max-width: none;
+  }
+
+  .pumpkinpatch p {
+    max-width: none;
+    align-self: center;
   }
 
   /* -------- end of dt dd card-------- */
@@ -421,7 +423,7 @@ h1 {
     margin: 2rem;
   }
 
-  .tree h2, p {
+  .tree h2 {
     grid-column: 1;
     grid-row: 1;
   }
@@ -437,6 +439,7 @@ h1 {
     font-weight: bold;
     line-height: 1.2;
     padding-left: 1rem;
+    letter-spacing: -.031em;
   }
 
   .christmas {
@@ -460,7 +463,12 @@ h1 {
     padding: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding-top: 6rem;
+    padding-top: 3rem;
+  }
+
+  .christmastree p {
+    max-width: none;
+    align-self: center;
   }
 
   .christmastree h3 {
