--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   box-sizing: border-box;
   line-height: 1.5;
 }
@@ -289,8 +289,7 @@ main img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas:
-      "card1 card2 card3";
+    grid-template-areas: "card1 card2 card3";
     gap: 1rem;
     padding: 2rem;
   }
