--- a/css/products.css
+++ b/css/products.css
@@ -108,6 +108,7 @@ h1 {
   }
 
   .button a {
+    font-size: 1rem;
     text-align: center;
   }
 
@@ -332,6 +333,10 @@ h1 {
     grid-column: 2/3;
     grid-row: 4;
     padding-bottom: 2rem;
+  }
+
+  .button a {
+    font-size: 1.7rem;
   }
 
   /* END OF APPLE-MEDIUM SCREEN */
