--- a/css/products.css
+++ b/css/products.css
@@ -1,5 +1,3 @@
-
-
 h1 {
   padding-left: 2rem;
   background-color: rgba(255, 255, 255, 0.5);
@@ -100,7 +98,7 @@ h1 {
   /* -------- end of dt dd card-------- */
   .button {
     margin: auto;
-    padding-top: 1rem;
+    padding-top: .5rem;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -110,6 +108,7 @@ h1 {
   .button a {
     font-size: 1rem;
     text-align: center;
+    padding: .5rem 1rem;
   }
 
   /* END OF APPLE CARD-Small screen */
@@ -337,6 +336,7 @@ h1 {
 
   .button a {
     font-size: 1.7rem;
+    padding: 1.5rem 2rem;
   }
 
   /* END OF APPLE-MEDIUM SCREEN */
