--- a/css/about.css
+++ b/css/about.css
@@ -14,6 +14,13 @@ main {
   padding: 2rem;
 }
 
+footer img {
+  position: absolute;
+  max-width: 40px;
+  top: 119px;
+  right: 10px;
+}
+
 @media only screen and (min-width: 20em) {
 
   main p {
